[tool.poetry]
name = "pypix"
version = "0.1.1"
description = "Python library for generating pix codes with CRC16 validation"
authors = ["Daniel Yohan <dyohan9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
